# countries-boundaries

./: README.md  pyproject.toml
.github/workflows/: push.yml  release.yml
data/: country_codes.csv
scripts/: processing.py
