[project]
name = "country-boundaries"
version = "1.2.0"
description = "A simplified dataset of world countries boundaries, including their maritime exclusive economic zones (EEZ)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "geojson>=3.2.0",
  "geopandas>=1.0.1",
  "ipykernel>=6.29.5",
  "matplotlib>=3.10.1",
]

[tool.bumpversion]
current_version = "1.2.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = true
sign_tags = false
tag_name = "{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "Bump version: {current_version} → {new_version}"
moveable_tags = []
commit_args = ""
setup_hooks = []
pre_commit_hooks = ["uv lock", "git add uv.lock"]
post_commit_hooks = []
